--- a/snippets/mega-menu-simle-nav.liquid
+++ b/snippets/mega-menu-simle-nav.liquid
@@ -52,37 +52,41 @@
 
         {% assign simple_list_styles = simple_list_styles | strip_newlines %}
 
-        <li class='header__menu-item header__menu-item--mobile header__menu-item--{{ block.type }} js-mega-menu-wrapper has-sub-menu'>
-            <div class='header__menu-item-details' open>
-                <div class='header__menu-item-summary focus-inset'>
-                    <a class='header__menu-item-link header__menu-item-link--mobile' href='{{ link.url }}'>
+        <li class="header__menu-item header__menu-item--mobile header__menu-item--{{ block.type }} js-mega-menu-wrapper has-sub-menu">
+            <div class="header__menu-item-details" open>
+                <div class="header__menu-item-summary focus-inset">
+                    <a
+                        id="headerMenuItemLink-{{ block.id }}"
+                        class="header__menu-item-link header__menu-item-link--mobile"
+                        href="{{ link.url }}"
+                    >
                         {{ link.title | escape }}
                         {% render 'icon-caret' %}
                     </a>
-                    <button class='mega-menu__next-button js-mega-parent-next-button' aria-expanded='true'>
+                    <button class="mega-menu__next-button js-mega-parent-next-button" aria-expanded="true">
                         {% render 'icon-arrow' %}
                     </button>
                 </div>
                 <div
-                    style='{{ simple_list_styles }}'
-                    class='simple-menu simple-menu--{{ position }} js-mega-menu'
-                    tabindex='-1'
+                    style="{{ simple_list_styles }}"
+                    class="simple-menu simple-menu--{{ position }} js-mega-menu"
+                    tabindex="-1"
                 >
-                    <div class='mega-menu__back'>
-                        <button class='mega-menu__back-button js-menu-back' aria-expanded='true'>
+                    <div class="mega-menu__back">
+                        <button class="mega-menu__back-button js-menu-back" aria-expanded="true">
                             {% render 'icon-caret' %}
                             {{ link.title | escape }}
                         </button>
                         <a
-                            class='mega-menu__back-close js-menu-toggle'
-                            href='#MobileMenuClose'
-                            aria-label='{{ 'accessibility.menu_close' | t }}'
+                            class="mega-menu__back-close js-menu-toggle"
+                            href="#MobileMenuClose"
+                            aria-label="{{ 'accessibility.menu_close' | t }}"
                         >
                             {% render 'icon-close' %}
                         </a>
                     </div>
-                    <div class='simple-menu__wrapper'>
-                        <div class='simple-menu__list-row'>
+                    <div class="simple-menu__wrapper">
+                        <div class="simple-menu__list-row">
                             {{ simple_list_dropdown }}
                         </div>
                     </div>
