--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -92,20 +92,8 @@
             }
         {% endstyle %}
 
-        <link
-            rel='stylesheet'
-            href='{{ 'plugins.css' | asset_url }}'
-            media='print'
-            onload="this.media='all'"
-        >
-        <link
-            rel='stylesheet'
-            href='{{ 'base.css' | asset_url }}'
-            media='print'
-            onload="this.media='all'"
-        >
-        <noscript>{{ 'plugins.css' | asset_url | stylesheet_tag }}</noscript>
-        <noscript>{{ 'base.css' | asset_url | stylesheet_tag }}</noscript>
+        {{ 'plugins.css' | asset_url | stylesheet_tag }}
+        {{ 'base.css' | asset_url | stylesheet_tag }}
 
         {% unless settings.type_body_font.system? %}
             <link rel='preload' as='font' href='{{ settings.type_body_font | font_url }}' type='font/woff2' crossorigin>
