--- a/scss/sections/section-header.scss
+++ b/scss/sections/section-header.scss
@@ -66,7 +66,7 @@
 .header__menu-item {
     margin: 0;
     padding: 0 1rem;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     text-transform: uppercase;
 }
 
@@ -78,7 +78,12 @@
     .icon {
         font-size: 2rem;
         vertical-align: middle;
+        pointer-events: none;
     }
+}
+
+.header__menu--right .header__menu-item--search {
+    position: static;
 }
 
 .header__menu-item-link {
@@ -139,9 +144,13 @@
     }
 }
 
+details-open {
+    display: block;
+}
+
 #settingsBox, 
 #userLinks {
-    background: var(--header-background-color);
+    background: var(--header-search-background-color);
     text-align:left; 
     box-shadow:0 .4rem .5rem rgba(0,0,0,.1); 
     transition:all 0.3s ease; 
@@ -155,9 +164,9 @@
     min-width:15rem; 
     position:absolute; 
     top:100%;
-    margin-top: 2rem;
+    margin-top: 3.3rem;
     right:1.5rem; 
-    z-index:99;
+    z-index:-99;
     text-transform: none;
 }
 
@@ -165,11 +174,13 @@
     min-width: 30rem;
 }
 
-#settingsBox.active, 
-#userLinks.active { 
+details-open.open #settingsBox, 
+details-open.open #userLinks { 
     visibility:visible; 
     opacity:1; 
-    top:100%; 
+    top:100%;
+    margin-top: 2rem;
+    z-index:99;
 }
 
 #settingsBox .btn { 
