--- a/snippets/footer-product-listing.liquid
+++ b/snippets/footer-product-listing.liquid
@@ -14,11 +14,11 @@
             <span class='visually-hidden'>{{ 'accessibility.vendor' | t }}</span>
             <span class='footer-product-post__vendor'>{{ card_product.vendor }}</span>
         {% endif %}
-        <h4 class='footer-product-post__title'>
+        <h5 class='footer-product-post__title'>
             <a href='{{ card_product.url | within: collection }}'>
                 {{ card_product.title | truncate: 30 | escape }}
             </a>
-        </h4>
-        {% render 'footer-price', product: card_product, price_class: '' %}
+        </h5>
+        {% render 'price', product: card_product, price_class: 'card-product__price', use_variant: true %}
     </div>
 {% endif %}
